--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "x2ts-init",
-  "version": "2.0.0",
+  "version": "2.0.2",
   "repository": {
     "type": "git",
     "url": "https://github.com/x2ts/init.git"
@@ -8,8 +8,8 @@
   "author": "TingSong-Syu",
   "license": "BSD",
   "devDependencies": {
-    "clean-css": "3.4.25",
-    "html-minifier": "3.2.3",
-    "uglify-js": "2.7.4"
+    "clean-css-cli": "^4.1.0",
+    "html-minifier": "^3.4.4",
+    "uglify-js": "^3.0.1"
   }
 }
