update license from BSD to BSD-3-Clause

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
       "": "protected"
     }
   },
-  "license": "BSD",
+  "license": "BSD-3-Clause",
   "authors": [
     {
       "name": "TingSong-Syu",
